<resources>
    <string name="app_name" translatable="false">FinMate</string>
    <string name="home">Home</string>
    <string name="statistic">Statistics</string>
    <string name="add">Add</string>
    <string name="planing">Planning</string>
    <string name="more">More</string>
    <string name="all">All</string>
    <string name="comment">Comment</string>
    <string name="comment_hint">Enter a comment</string>
    <string name="expenseOp">Expenses</string>
    <string name="admissionOp">Incomes</string>
    <string name="visible">Show</string>
    <string name="unvisible">Hide</string>
    <string name="new_category">New category</string>
    <string name="all_category">All categories</string>
    <string name="list_category">Category list</string>
    <string name="edit_category">Edit category</string>
    <string name="category_name">Category name</string>
    <string name="category_name_add">Enter category name</string>
    <string name="category_icon">Category icon</string>
    <string name="category_new_icon">New category icon</string>
    <string name="category_color">Category color</string>
    <string name="category_not_created">No categories created</string>
    <string name="operation_type">Operation type</string>
    <string name="operation_card">Payment method</string>
    <string name="operation_date">Date</string>
    <string name="operation_date_icon">Date picker icon</string>
    <string name="operation_settings">Operation filters</string>
    <string name="new_transaction">New transaction</string>
    <string name="transaction_hint" translatable="false">0</string>
    <string name="transaction_date_hint" translatable="false">01.01.2025 - 31.12.2025</string>
    <string name="transaction_date">Transaction date</string>
    <string name="transaction_money">Amount</string>
    <string name="transaction_from">Transfer from account</string>
    <string name="transaction_to">Transfer to account</string>
    <string name="transaction_history">Transaction history</string>
    <string name="transaction_settings_icon">Adjust display settings</string>
    <string name="transaction_not_found">No transactions found for this period</string>
    <string name="transaction_not_found_with_description">No transactions yet. They will appear after you add them using the «Add» button</string>
    <string name="transaction_recent">Recent transactions</string>
    <string name="new_card">New account</string>
    <string name="all_card">All accounts</string>
    <string name="add_card">Add account</string>
    <string name="add_card_transaction">Create transfer</string>
    <string name="card_history">Transfer history</string>
    <string name="card_name">Account name</string>
    <string name="card_name_add">Enter account name</string>
    <string name="card_balance">Initial balance</string>
    <string name="card_balance_hint" translatable="false">0 ₽</string>
    <string name="card_title">Total</string>
    <string name="card_date">Creation date</string>
    <string name="visibility">Visibility</string>
    <string name="card_new_icon">New account icon</string>
    <string name="card_not_found">No accounts found</string>
    <string name="card_not_found_with_description">No accounts available. Add accounts using the&#160;«Add&#160;account» button</string>
    <string name="card_not_created">No accounts created</string>
    <string name="card_from">Source account</string>
    <string name="card_to">Destination account</string>
    <string name="from">From</string>
    <string name="to">to</string>
    <string name="of">of</string>
    <string name="not_found">Not found</string>
    <string name="card_visibility">Visibility in total balance</string>
    <string name="more_screen">More</string>
    <string name="more_screen_category">Manage categories</string>
    <string name="more_screen_cards">Manage accounts</string>
    <string name="more_screen_currency">Change currency</string>
    <string name="more_screen_language">Change language</string>
    <string name="new_planning">New planning</string>
    <string name="planning_title">Planned expenses</string>
    <string name="planning_date">Planning period</string>
    <string name="planning_money">Planned amount</string>
    <string name="planning_money_hint">Enter planned amount</string>
    <string name="planning_not_found">No planning found for this period</string>
    <string name="planning_new_icon">New planning icon</string>
    <string name="category">Category</string>
    <string name="period">Period</string>
    <string name="total">Total:</string>
    <string name="balance">Balance</string>
    <string name="total_balance">Current balance</string>
    <string name="balance_hint">Enter amount</string>
    <string name="spent">Spent</string>
    <string name="remainder">Remaining</string>
    <string name="admission_total">Total income</string>
    <string name="admission_graph">Income chart</string>
    <string name="back_btn">Go back</string>
    <string name="delete_btn">Delete</string>
    <string name="save_btn">Save</string>
    <string name="edit_btn">Edit</string>
    <string name="create_btn">Create</string>
    <string name="select_btn">Select</string>
    <string name="visibility_btn">Toggle visibility</string>
    <string name="apply_btn">Apply</string>
    <string name="clear_btn">Clear</string>
    <string name="version">Version</string>
    <string name="no_description" translatable="false"> </string>
    <string name="currency" translatable="false">$</string>
    <string name="expenseTitle">Expense</string>
    <string name="admissionTitle">Income</string>
    <string name="plus">Transfer plus</string>
    <string name="minus">Transfer minus</string>
    <string name="create">New account</string>
    <string name="all_operation">All operations</string>
    <string name="transfers">Transfers between accounts</string>
    <string name="message_no_title">No title specified</string>
    <string name="message_no_type">No operation type specified</string>
    <string name="message_no_money">No amount specified</string>
    <string name="message_error_delete">Failed to delete</string>
    <string name="message_no_card">No account specified</string>
    <string name="message_no_card_from">No source account specified</string>
    <string name="message_no_card_to">No destination account specified</string>
    <string name="message_no_category">Category not selected</string>
    <string name="message_no_icon">No icon selected</string>
    <string name="message_no_date">No date specified</string>
    <string name="message_category_exists">Category with this name already exists</string>
    <string name="message_not_enough_money">Not enough funds in the selected account</string>
    <string name="message_card_not_exist">No available accounts</string>
    <string name="today_title">Today</string>
    <string name="yesterday_title">Yesterday</string>
    <string name="category_error">Category loading error</string>
    <string name="all_icons_title">All icons</string>
    <string name="delete_message">Are you sure you want to delete this item?</string>
    <string name="yes_title">Yes</string>
    <string name="cancel_title">Cancel</string>
    <string name="error_edit_message">Editing not available</string>
    <string name="error_loading">Data loading error</string>
    <string name="card_visible">Included in total balance</string>
    <string name="card_unvisible">Excluded from total balance</string>
    <string name="card_edit">Edit account</string>
    <string name="no_comment_text">No comment</string>
    <string name="planning_edit_title">Edit planning</string>
    <string name="transaction_edit_title">Edit transaction</string>
    <string name="date_picker_title">Select date</string>
    <string name="info_title">Information</string>
    <string name="log_error_card_add">Error occurred while adding account</string>
    <string name="log_error_card_load">Error occurred while loading accounts</string>
    <string name="log_error_category_add">Error occurred while adding category</string>
    <string name="log_error_category_load">Error occurred while loading categories</string>
    <string name="log_error_operation_add">Error occurred while adding transaction</string>
    <string name="log_error_operation_load">Error occurred while loading transactions</string>
    <string name="log_error_planning_add">Error occurred while adding planning</string>
    <string name="log_error_planning_load">Error occurred while loading plannings</string>
    <string name="new_card_title">New account created</string>
    <string name="move_card_title">Transfer between own accounts</string>

    <string name="currency_RUB">Russian ruble (RUB)</string>
    <string name="currency_BYN">Belarusian ruble (BYN)</string>
    <string name="currency_UAH">Ukrainian hryvnia (UAH)</string>
    <string name="currency_KZT">Kazakhstani tenge (KZT)</string>
    <string name="currency_USD">US Dollar (USD)</string>
    <string name="currency_EUR">Euro (EUR)</string>

    <string name="language_Default">Default</string>
    <string name="language_RU">Russian</string>
    <string name="language_Eng">English</string>

</resources>