<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:title="@string/home"
        android:icon="@drawable/ic_home"
        android:orderInCategory="1"/>
    <item
        android:id="@+id/statistic"
        android:title="@string/statistic"
        android:icon="@drawable/ic_statistic"
        android:orderInCategory="2"/>
    <item
        android:id="@+id/add"
        android:title="@string/add"
        android:icon="@drawable/ic_add"
        android:orderInCategory="3"/>
    <item
        android:id="@+id/planing"
        android:title="@string/planing"
        android:icon="@drawable/ic_planing"
        android:orderInCategory="4"/>
    <item
        android:id="@+id/more"
        android:title="@string/more"
        android:icon="@drawable/ic_more"
        android:orderInCategory="5"/>
</menu>