<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/Grey"
    android:orientation="vertical"
    tools:context=".ui.fragments.add.AddNewCard">

    <TextView
        style="@style/CenterTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_card"
        android:padding="20dp" />

    <ImageView
        style="@style/SeparatorLine"
        android:id="@+id/separator_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">
    <TextView
        style="@style/TitleForEditText"
        android:id="@+id/titleText"
        android:text="@string/card_name" />

    <EditText
        style="@style/TextEditText"
        android:id="@+id/title"
        android:layout_marginTop="10dp"
        android:paddingHorizontal="8dp"
        android:hint="@string/card_name_add"/>

    <TextView
        android:id="@+id/balanceText"
        style="@style/TitleForEditText"
        android:layout_marginTop="16dp"
        android:text="@string/card_balance"/>

    <EditText
        style="@style/TextEditText"
        android:id="@+id/balance"
        android:layout_marginTop="10dp"
        android:paddingHorizontal="8dp"
        android:hint="@string/card_balance_hint" />

        <TextView
            style="@style/TitleForEditText"
            android:id="@+id/commentText"
            android:layout_marginTop="16dp"
            android:text="@string/comment" />

        <EditText
            style="@style/TextEditText"
            android:id="@+id/comment"
            android:layout_marginTop="10dp"
            android:paddingHorizontal="8dp"
            android:hint="@string/comment_hint" />

    <Button
        style="@style/ButtonMain"
        android:id="@+id/addButton"
        android:text="@string/create_btn" />
    </LinearLayout>

</LinearLayout>