<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.fragments.info.CardInfo">

    <FrameLayout
        style="@style/HeaderLayout"
        android:layout_margin="12dp"
        android:background="@drawable/rounded_shape"
        android:padding="20dp">

        <ImageView
            android:id="@+id/backBtn"
            style="@style/ButtonBack" />

        <TextView
            android:id="@+id/title"
            style="@style/CenterTitle"
            android:ellipsize="end"
            android:maxWidth="250dp"
            android:maxLines="1" />

        <ImageView
            android:id="@+id/editOrDeleteBtn"
            style="@style/ButtonEdit" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/infoLayout"
        style="@style/RoundedGreyLayoutNoTopMargin"
        android:padding="20dp"
        android:visibility="gone">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/dateText"
                    style="@style/TitleForEditText"
                    android:text="@string/card_date" />

                <TextView
                    android:id="@+id/date"
                    style="@style/BodyText" />

                <TextView
                    android:id="@+id/balanceText"
                    style="@style/TitleForEditText"
                    android:layout_marginTop="12dp"
                    android:text="@string/total_balance" />

                <TextView
                    android:id="@+id/balance"
                    style="@style/BodyText" />

                <TextView
                    android:id="@+id/visibleText"
                    style="@style/TitleForEditText"
                    android:layout_marginTop="12dp"
                    android:text="@string/visibility" />

                <TextView
                    android:id="@+id/visible"
                    style="@style/BodyText" />

                <TextView
                    android:id="@+id/commentText"
                    style="@style/TitleForEditText"
                    android:layout_marginTop="12dp"
                    android:text="@string/comment" />

                <TextView
                    android:id="@+id/comment"
                    style="@style/BodyText"
                    android:ellipsize="end"
                    android:maxLines="3" />
            </LinearLayout>
        </ScrollView>

        <Button
            android:id="@+id/deleteBtn"
            style="@style/ButtonMain"
            android:text="@string/delete_btn"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/editLayout"
        style="@style/RoundedGreyLayoutNoTopMargin"
        android:padding="20dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/TitleForEditText"
                    android:text="@string/card_name" />

                <EditText
                    android:id="@+id/titleEditText"
                    style="@style/TextEditText"
                    android:layout_marginTop="8dp"
                    android:hint="@string/card_name_add"
                    android:paddingHorizontal="8dp" />

                <TextView
                    style="@style/TitleForEditText"
                    android:layout_marginTop="12dp"
                    android:text="@string/total_balance" />

                <TextView
                    android:id="@+id/balanceEdit"
                    style="@style/TextEditText"
                    android:gravity="center_vertical"
                    android:paddingHorizontal="8dp"
                    android:layout_marginTop="8dp" />

                <TextView
                    android:id="@+id/visibleEditText"
                    style="@style/TitleForEditText"
                    android:layout_marginTop="12dp"
                    android:text="@string/card_visibility" />

                <RadioGroup
                    android:id="@+id/visibleSelector"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/visibleEdit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/visible"
                        android:textColor="@color/White"
                        android:textSize="16sp" />

                    <RadioButton
                        android:id="@+id/unvisibleEdit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="@string/unvisible"
                        android:textColor="@color/White"
                        android:textSize="16sp" />
                </RadioGroup>

                <TextView
                    style="@style/TitleForEditText"
                    android:layout_marginTop="2dp"
                    android:text="@string/comment" />

                <EditText
                    android:id="@+id/commentEditText"
                    style="@style/TextEditText"
                    android:layout_marginTop="8dp"
                    android:hint="@string/comment_hint"
                    android:paddingHorizontal="8dp" />
            </LinearLayout>
        </ScrollView>

        <Button
            android:id="@+id/saveBtn"
            style="@style/ButtonMain"
            android:text="@string/save_btn"/>
    </LinearLayout>
</LinearLayout>