<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/BG"
    android:orientation="vertical"
    android:paddingBottom="24dp">

    <TextView
        style="@style/TitleHuge"
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:padding="20dp"
        android:text="@string/operation_settings" />

    <ImageView
        android:id="@+id/separator_line"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_weight="1"
        android:contentDescription="@string/no_description"
        app:srcCompat="@drawable/separator_line" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/editLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingVertical="12dp"
                android:textSize="16sp"
                android:text="@string/operation_type" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/types"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/categoriesTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingTop="28dp"
                android:paddingBottom="12dp"
                android:textSize="16sp"
                android:text="@string/category" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/categories"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" />
        </LinearLayout>
    </ScrollView>

    <Button
        style="@style/ButtonMain"
        android:id="@+id/saveBtn"
        android:layout_marginHorizontal="20dp"
        android:text="@string/apply_btn" />


    <Button
        style="@style/ButtonMain"
        android:id="@+id/resetBtn"
        android:layout_marginHorizontal="20dp"
        android:background="@color/transparent"
        android:layout_marginTop="0dp"
        android:text="@string/clear_btn" />
</LinearLayout>