<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:background="@color/Grey"
    android:orientation="vertical"
    tools:context=".ui.fragments.allList.AllCategoriesList">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="20dp"
        android:text="@string/all_category"
        android:textSize="28sp" />

    <ImageView
        android:id="@+id/separator_line"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:contentDescription="@string/no_description"
        android:src="@drawable/separator_line" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/itemCategory"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="20dp" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="28dp"
        android:background="@drawable/button"
        android:minHeight="60dp"
        android:paddingHorizontal="48dp"
        android:text="@string/select_btn"
        android:textColor="@color/White"
        android:textSize="20sp" />
</LinearLayout>